# recetario_whatsapp

./: .env.example  .flake8  .gitignore  LICENSE  README.md  Recetas húngaras(1).xlsx  app_streamlit.py  check_recipes.ps1  check_recipes.py  create_table_recetas.sql  fix_dependencies.py  pyproject.toml  requirements.txt  reset_database.py  run_app.py  run_extractor.ps1  run_extractor.py  setup.py  test_excel_functionality.py  test_parsing.py  test_parsing_mock.py  test_regex.py  test_regex_fijo.py  verify_setup.py
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  keepalive.yml
docs/: LIMPIEZA_FINAL.md  OPTIMIZACION_COMPLETADA.md  README.md  SETUP_WINDOWS.md  SOLUCION_DATABASE.md  SOLUCION_IMPORTS.md  SOLUCION_MISTRALAI.md  SOLUCION_MISTRAL_API.md  SOLUCION_MISTRAL_ERROR.md  SOLUCION_PYTHON311.md
samples/: Chat de WhatsApp .txt
scripts/: inspect_excel.py  inspect_excel_images.py  process_excel.py
sql/: create_table_recetas.sql  migration_add_images.sql  rollback_migration.sql
src/recetario_whatsapp/: __init__.py  __main__.py  app.py  extractor.py  mistral_client.py  supabase_utils.py
state/: last_processed.json
tests/: README.md  conftest.py  test_app.py  test_extractor.py  test_flujo_completo.py  test_integration.py  test_mistral_client.py  test_supabase_utils.py
